--- a/index.html
+++ b/index.html
@@ -1,43 +1,3 @@
 <!DOCTYPE html>
 
-<html lang="en-US">
-	<head>
-		<title>PolyTrack</title><meta name="description" content="A low-poly racing game with loops, jumps and high speeds, where every millisecond counts."><meta property="og:title" content="PolyTrack"><meta property="og:description" content="A low-poly racing game with loops, jumps and high speeds, where every millisecond counts."><meta property="og:type" content="website"><meta property="og:url" content="https://www.kodub.com/apps/polytrack"><meta property="og:image" content="https://www.kodub.com/apps/polytrack/image"><meta name="twitter:card" content="summary_large_image"><meta name="twitter:site" content="@KodubDev">		<link rel="stylesheet" type="text/css" href="/css/app.css">
-		
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-
-<link rel="icon" type="image/png" sizes="48x48" href="/favicon/favicon-48x48.png">
-<link rel="icon" type="image/png" sizes="192x192" href="/favicon/favicon-192x192.png">
-
-<link rel="apple-touch-icon" type="image/png" sizes="167x167" href="/favicon/favicon-167x167.png">
-<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/favicon/favicon-180x180.png">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-		<noscript>
-			<style>
-				#app {
-					display: none;
-				}
-			</style>
-		</noscript>
-	</head>
-
-	<body>
-		<noscript>Error: JavaScript is not supported</noscript>
-		<iframe id="app" src="spike172.github.io" importance="high" sandbox="allow-scripts allow-same-origin allow-top-navigation allow-popups allow-popups-to-escape-sandbox allow-pointer-lock" allow="autoplay;fullscreen;vr;xr-spatial-tracking;clipboard-write">Error: iframe is not supported</iframe>		<script>
-			var iframe = document.getElementById("app");
-			iframe.addEventListener("load", function() {
-				this.focus();
-			});
-
-			window.addEventListener("message", function(event) {
-				var domain = "https://spike172.github.io/";
-				if(event.origin == domain) {
-					if(event.data.hasOwnProperty("replaceState")) {
-						window.history.replaceState(null, "", event.data["replaceState"]);
-					}
-				}
-			});
-		</script>
-	</body>
-</html>
+<p>This image is written entirely in html. Don't beleive us? then click <a href="pic.html" download>this link</a>, then open the downloaded file on your computer.<p>
