--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
 <!DOCTYPE html>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+
+.montserrat-semibold {
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+}
+
 <p>This image is written entirely in html. Don't beleive us? then click <a href="pic.html" download>this link</a>, then open the downloaded file on your computer.<p>
