--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@
   font-style: normal;
 }
 
-<p>This image is written entirely in html. Don't beleive us? then click <a href="pic.html" download>this link</a>, then open the downloaded file on your computer.<p>
+<p> class='roboto-bold' This image is written entirely in html. Don't beleive us? then click <a href="pic.html" download>this link</a>, then open the downloaded file on your computer.<p>
