--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   
-<p> class='roboto-bold' This image is written entirely in html. Don't beleive us? then click <a href="pic.html" download>this link</a>, then open the downloaded file on your computer.</p>
+<p class='roboto-bold'>This image is written entirely in html. Don't beleive us? then click <a href="pic.html" download>this link</a>, then open the downloaded file on your computer.</p>
 
 </body>
 </html>
